@@ -7,6 +7,7 @@ Fixed in dev version:
   * FFT test in FFTXlib was not always compiling 
   * angle1, angle2, starting_magnetization incorrectly written to xml file
   * Bug in Hubbard forces and stress for bands parallelization (when nproc_pool>nbnd) 
+  * Bug in DFT+U+V when starting_ns_eigenvalue is used (courtesy of M. Cococcioni)
   * Crash in the calculation of Z* with ultrasoft PP when the number of bands
     is larger than the number of occupied bands (thanks to Sasha Fonari)
   * Crash in matdyn.x when ibrav=0 (thanks to Sasha Fonari)
